<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#298DAE"
    tools:context="com.example.app.registrations.RegistrationActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/background"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        style="@style/gagalina"
        android:layout_width="351dp"
        android:layout_height="79sp"
        android:gravity="center"
        android:text="@string/let_s_raise_the_puppy_together"
        android:textColor="#fffaef"
        android:shadowColor="#000000"
        android:shadowDx="7"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />

    <TextView
        android:id="@+id/textViewWelcome"
        style="@style/gagalina"
        android:layout_width="338dp"
        android:layout_height="97dp"
        android:gravity="center"
        android:text="@string/it_s_time_to"
        android:textColor="#fffaef"
        android:shadowColor="#000000"
        android:shadowDx="7"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="193dp"
        android:layout_height="193dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        tools:ignore="MissingConstraints" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        style="@style/montserratbold"
        android:layout_width="190dp"
        android:layout_height="63dp"
        android:background="@drawable/button_shadow_orange"

        android:elevation="25sp"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textColor="#fffaef"
        android:shadowColor="#000000"
        android:shadowDx="7"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView5"
        style="@style/montserratbold"
        android:layout_width="338dp"
        android:layout_height="97dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="#fffaef"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        style="@style/montserratbold"
        android:layout_width="190dp"
        android:layout_height="63dp"
        android:background="@drawable/button_shadow_orange"

        android:elevation="25sp"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="#fffaef"
        android:shadowColor="#000000"
        android:shadowDx="7"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>