<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#298DAE"
    tools:context="com.example.app.registrations.WelcomeActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="414dp"
        android:layout_height="734dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"

        style="@style/gagalina"
        android:layout_width="351dp"
        android:layout_height="79sp"
        android:gravity="center"
        android:text="@string/let_s_raise_the_puppy_together"
        android:textColor="#fffaef"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />



    <TextView
        android:id="@+id/textViewWelcome"
        style="@style/montserrat"
        android:layout_width="338dp"
        android:layout_height="97dp"
        android:gravity="center"
        android:text="@string/welcome_to_grow_a_pup"
        android:textColor="#fffaef"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/textViewAbout"
        style="@style/montserrat"
        android:layout_width="318dp"
        android:layout_height="133dp"
        android:gravity="center"
        android:text="@string/you_will_learn_about_dog_nutrition_training_health_and_wellness_and_track_your_furry_friend_s_progress_as_they_grow_and_develop"
        android:textColor="#fffaef"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="193dp"
        android:layout_height="193dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/startButton"
        style="@style/montserrat"
        android:layout_width="190dp"
        android:layout_height="63dp"
        android:background="@drawable/button_orange"
        android:backgroundTint="@color/orange"
        android:elevation="25sp"
        android:padding="10dp"
        android:shadowColor="#000000"
        android:shadowDx="7"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/start"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635"
        tools:targetApi="lollipop"

        />

</androidx.constraintlayout.widget.ConstraintLayout>